--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,8 +4,9 @@
   "description": "CARE Backend.",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/index.js",
     "build": "tsc -b",
-    "dev": "node dist/index.js"
+    "dev": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
