--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,8 +4,6 @@
   "description": "CARE Backend.",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc -b",
     "dev": "nodemon src/index.ts"
   },
   "repository": {
@@ -26,12 +24,18 @@
     "url": "https://github.com/Bug-Bust3rs/CARE-Community-Aid-and-Resource-Exchange/issues"
   },
   "homepage": "https://github.com/Bug-Bust3rs/CARE-Community-Aid-and-Resource-Exchange#readme",
+  "prisma": {
+    "schema": "./src/prisma/schema.prisma"
+  },
   "dependencies": {
+    "@prisma/client": "5.15.0",
     "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node": "^20.11.24",
     "nodemon": "^3.1.3",
+    "prisma": "^5.15.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
